--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
 *.iml
 .gradle
-/local.properties
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
+local.properties
+.idea/
 .DS_Store
 /build
 /captures
