update gradle files.
Signed-off-by: Peng Wang <wangpeng@thinkingdata.cn>

--- a/aopplugin/build.gradle
+++ b/aopplugin/build.gradle
@@ -26,12 +26,12 @@ dependencies {
         jcenter()
     }
 
-    compile gradleApi()
-    compile localGroovy()
+    implementation gradleApi()
+    implementation localGroovy()
 
-    compile 'com.android.tools.build:gradle:2.0.0'
-    compile 'org.aspectj:aspectjrt:1.8.10'
-    compile 'org.aspectj:aspectjtools:1.8.10'
+    implementation 'com.android.tools.build:gradle:2.0.0'
+    implementation 'org.aspectj:aspectjrt:1.8.10'
+    implementation 'org.aspectj:aspectjtools:1.8.10'
 
 }
 
