--- a/runtime/build.gradle
+++ b/runtime/build.gradle
@@ -6,8 +6,6 @@ import org.aspectj.tools.ajc.Main
 android {
     compileSdkVersion 27
 
-
-
     defaultConfig {
         minSdkVersion 15
         targetSdkVersion 27
@@ -32,9 +30,10 @@ buildscript {
         mavenLocal()
         mavenCentral()
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0'
+        classpath 'com.android.tools.build:gradle:3.3.2'
         classpath 'org.aspectj:aspectjtools:1.8.10'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.6'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
@@ -66,5 +65,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-    compile 'org.aspectj:aspectjrt:1.8.10'
+    implementation 'org.aspectj:aspectjrt:1.8.10'
 }
