--- a/runtime/build.gradle
+++ b/runtime/build.gradle
@@ -50,3 +50,20 @@ uploadArchives{
         }
     }
 }
+
+// 发布新版本 bintrayUpload
+apply plugin: 'com.novoda.bintray-release'
+
+Properties properties = new Properties()
+properties.load(project.rootProject.file('local.properties').newDataInputStream())
+publish {
+    bintrayUser = properties.getProperty("bintray.user")
+    bintrayKey = properties.getProperty("bintray.apikey")
+    dryRun = false
+    userOrg = 'thinkinggame'
+    groupId = 'com.thinking.analyselibrary'
+    artifactId = 'ThinkingAnalyticsRuntime'
+    publishVersion = version
+    desc = 'Support library for Android events collection'
+    website =  'https://github.com/thinkinggame/ThinkingAnalyticsSDK'
+}
