--- a/thinkingsdk/src/main/AndroidManifest.xml
+++ b/thinkingsdk/src/main/AndroidManifest.xml
@@ -1,15 +1,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.thinking.analyselibrary">
 
+    <!--
+    This permission is required to allow the application to send events and properties to Mixpanel.
+   -->
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <!--
+      This permission is optional but recommended so we can be smart about when to send data.
+     -->
+    <!--
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    -->
+
     <application android:allowBackup="true" android:label="@string/app_name"
         android:supportsRtl="true">
-
-    <provider
-            android:name="com.thinking.analyselibrary.TDContentProvider"
-            android:authorities="${applicationId}.TDContentProvider"
-            android:enabled="true"
-            android:exported="false" />
-
         <meta-data
             android:name="com.thinkingdata.analytics.android.MainProcessName"
             android:value="${applicationId}" />
