Demo: modified for muli-app-id test.
Signed-off-by: Peng Wang <wangpeng@thinkingdata.cn>

--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -23,8 +23,8 @@ android {
         applicationId "com.thinking.analyselibrary.demo"
         minSdkVersion 15
         targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -55,8 +55,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-    implementation 'com.thinking.analyselibrary:ThinkingAnalyticsSDK:1.2.0'
-    //implementation project(':thinkingsdk')
+    //implementation 'com.thinking.analyselibrary:ThinkingAnalyticsSDK:1.2.0'
+    implementation project(':thinkingsdk')
     //implementation project(':runtime')
     implementation 'com.android.support:recyclerview-v7:28.0.0'
 }
