--- a/demox/build.gradle
+++ b/demox/build.gradle
@@ -12,7 +12,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.1'
-        classpath 'com.thinking.analyselibrary.plugin:android-gradle-plugin:1.2.0'
+        classpath 'com.thinking.analyselibrary.plugin:android-gradle-plugin:1.2.1'
     }
 }
 
@@ -26,10 +26,14 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "com.thinking.analyselibrary.TestRunner"
+        testInstrumentationRunnerArguments clearPackageData: 'true'
 
         vectorDrawables.useSupportLibrary = true
 
+    }
+    testOptions {
+        execution 'ANDROIDX_TEST_ORCHESTRATOR'
     }
 
     buildTypes {
@@ -45,18 +49,23 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.android.gms:play-services-plus:16.0.0'
     implementation 'com.google.android.material:material:1.0.0'
-    implementation 'androidx.vectordrawable:vectordrawable:1.0.0'
+    implementation 'androidx.vectordrawable:vectordrawable:1.0.1'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+    testImplementation 'org.mockito:mockito-core:2.19.0'
+    androidTestImplementation 'androidx.test:core:1.2.0'
+    androidTestImplementation 'androidx.test:runner:1.3.0-alpha01'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2-alpha01'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha01'
+    androidTestImplementation 'androidx.test.espresso:espresso-web:3.2.0'
+    //debugImplementation 'androidx.fragment:fragment-testing:1.1.0-beta01'
+    androidTestUtil 'androidx.test:orchestrator:1.2.0'
 
-    implementation 'com.thinking.analyselibrary:ThinkingAnalyticsSDK:1.2.0'
-    //implementation project(':thinkingsdk')
-    //implementation project(':runtime')
+    //implementation 'com.thinking.analyselibrary:ThinkingAnalyticsSDK:1.2.0'
+    implementation project(':thinkingsdk')
+    implementation project(':runtime')
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
 }
