Demo: add click demos.
Signed-off-by: Peng Wang <wangpeng@thinkingdata.cn>

--- a/demox/build.gradle
+++ b/demox/build.gradle
@@ -17,7 +17,7 @@ buildscript {
 }
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 'android-Q'
 
     defaultConfig {
         applicationId "com.thinking.analyselibrary.demo"
