SDK: 优化退出程序时的流程以保证数据写入缓存并尝试上报。
- exit(0) 退出: 通过Runtime.shutdownHooks
- 异常退出: ExceptionHandler
- 用户手动结束进程: 通过启动后台服务监听用户结束进程的操作

Signed-off-by: Peng Wang <wangpeng@thinkingdata.cn>

--- a/thinkingsdk/src/main/AndroidManifest.xml
+++ b/thinkingsdk/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
         <meta-data
             android:name="com.thinkingdata.analytics.android.MainProcessName"
             android:value="${applicationId}" />
+        <service
+            android:name=".TDQuitSafelyService$TDKeepAliveService"
+            android:stopWithTask="false"
+            android:exported="false" />
 
     </application>
 
