Project: update gradle files for bintry upload.
Signed-off-by: Peng Wang <wangpeng@thinkingdata.cn>

--- a/runtime/build.gradle
+++ b/runtime/build.gradle
@@ -33,6 +33,7 @@ publish {
     bintrayKey = properties.getProperty("bintray.apikey")
     dryRun = false
     userOrg = POM_ORGANIZATION
+    repoName = POM_REPO_NAME
     groupId = POM_GROUP_ID
     artifactId = 'ThinkingAnalyticsRuntime'
     publishVersion = VERSION_NAME_RUNTIME
