--- a/gradle.properties
+++ b/gradle.properties
@@ -14,6 +14,8 @@ org.gradle.jvmargs=-Xmx1536m
 VERSION_NAME_SDK=2.5.4
 VERSION_NAME_PLUGIN=2.0.2
 VERSION_NAME_RUNTIME=2.0.0
+android.injected.testOnly=false
+android.useAndroidX=true
 
 POM_ORGANIZATION=thinkinggame
 POM_REPO_NAME=thinkingdata
