--- a/thinkingsdk/src/main/AndroidManifest.xml
+++ b/thinkingsdk/src/main/AndroidManifest.xml
@@ -1,25 +1,26 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cn.thinkingdata.android">
 
-    <!--
-    This permission is required to allow the application to send events and properties to ThinkingData.
-   -->
-    <uses-permission android:name="android.permission.INTERNET" />
-
-    <!--
-      This permission is optional but recommended so we can be smart about when to send data.
-     -->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
+    <!--     This permission is required to allow the application to send events and properties to ThinkingData. -->
     <application>
         <meta-data
             android:name="cn.thinkingdata.android.MainProcessName"
             android:value="${applicationId}" />
-        <service
-            android:name="cn.thinkingdata.android.TDQuitSafelyService$TDKeepAliveService"
-            android:stopWithTask="false"
-            android:exported="false" />
 
+        <receiver
+            android:name=".TDReceiver"
+            android:enabled="false"
+            android:exported="false"></receiver>
+
+        <service
+            android:name=".TDQuitSafelyService$TDKeepAliveService"
+            android:exported="false"
+            android:stopWithTask="false" />
     </application>
+    <!--       This permission is optional but recommended so we can be smart about when to send data. -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
