--- a/demox/src/main/AndroidManifest.xml
+++ b/demox/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <service
+            android:process=":service"
+            android:name=".subprocess.TDSubService"/>
         <activity android:name=".subprocess.TDBaseActivity" />
         <activity android:name=".subprocess.TDListActivity" />
         <activity
