--- a/thinkingsdk/build.gradle
+++ b/thinkingsdk/build.gradle
@@ -101,9 +101,9 @@ tasks.withType(Javadoc).all { enabled = false }
 
 
 //maven central发布
-//ext {
-//    PUBLISH_GROUP_ID = "cn.thinkingdata.android"        //项目包名
-//    PUBLISH_ARTIFACT_ID = 'ThinkingAnalyticsSDK'            //项目名
-//    PUBLISH_VERSION = '2.7.1'                    //版本号
-//}
-//apply from: "publish-mavencentral.gradle"
+ext {
+    PUBLISH_GROUP_ID = "cn.thinkingdata.android"        //项目包名
+    PUBLISH_ARTIFACT_ID = 'ThinkingAnalyticsSDK'            //项目名
+    PUBLISH_VERSION = '2.7.3'                    //版本号
+}
+apply from: "publish-mavencentral.gradle"
