feat:app_start事件和计时事件增加#background_duration;预置属性新增#ram、#disk、#intall_time、#fps、#start_reason、#simulator;

--- a/thinkingsdk/build.gradle
+++ b/thinkingsdk/build.gradle
@@ -105,6 +105,6 @@ tasks.withType(Javadoc).all { enabled = false }
 ext {
     PUBLISH_GROUP_ID = "cn.thinkingdata.android"        //项目包名
     PUBLISH_ARTIFACT_ID = 'ThinkingAnalyticsSDK'            //项目名
-    PUBLISH_VERSION = '2.7.4'                    //版本号
+    PUBLISH_VERSION = VERSION_NAME_SDK                    //版本号
 }
 apply from: "publish-mavencentral.gradle"
