--- a/demox/src/main/AndroidManifest.xml
+++ b/demox/src/main/AndroidManifest.xml
@@ -53,7 +53,14 @@
                     android:host="lolita"
                     android:scheme="night"/>
             </intent-filter>
-        </activity> <!-- 设置缓存数据保留天数(默认 15 天) -->
+        </activity>
+        <activity android:name=".CompatibilityActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <!-- 设置缓存数据保留天数(默认 15 天) -->
         <meta-data
             android:name="cn.thinkingdata.android.EnableTrackLogging"
             android:value="true" /> <!-- 允许安全退出服务(默认为 true) -->
