--- a/demox/build.gradle
+++ b/demox/build.gradle
@@ -44,7 +44,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.vectordrawable:vectordrawable:1.0.1'
-    implementation 'androidx.test:monitor:1.3.0'
+//    implementation 'androidx.test:monitor:1.3.0'
 
     //for test
     testImplementation 'junit:junit:4.13.2'
