--- a/aopplugin/src/main/resources/META-INF/gradle-plugins/cn.thinkingdata.android.properties
+++ b/aopplugin/src/main/resources/META-INF/gradle-plugins/cn.thinkingdata.android.properties
@@ -1,1 +1,1 @@
-implementation-class=cn.thinkingdata.android.plugin.ThinkingAnalyticsPlugin
+implementation-class=cn.thinkingdata.android.plugin.config.ThinkingAnalyticsExtension
