Revert "Merge branch 'dev_longbing' into 'dev'"
This reverts merge request !4

--- a/aopplugin/src/main/resources/META-INF/gradle-plugins/cn.thinkingdata.android.properties
+++ b/aopplugin/src/main/resources/META-INF/gradle-plugins/cn.thinkingdata.android.properties
@@ -1,1 +1,1 @@
-implementation-class=cn.thinkingdata.android.plugin.config.ThinkingAnalyticsExtension
+implementation-class=cn.thinkingdata.android.plugin.ThinkingAnalyticsPlugin
