发布版本:$sdk_veriosn

--- a/local.properties
+++ b/local.properties
@@ -8,6 +8,6 @@
 sdk.dir=/Users/lihuanan/Library/Android/sdk
 signing.keyId=68B98F86
 signing.password=thinkingdata2021
-signing.secretKeyRingFile=/Users/lihuanan/Documents/Android/secring.gpg
+signing.secretKeyRingFile=../../secring.gpg
 ossrhUsername=Thinking
 ossrhPassword=Data@game2018
