--- a/demox/build.gradle
+++ b/demox/build.gradle
@@ -38,7 +38,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -59,9 +59,6 @@ dependencies {
     testImplementation "org.powermock:powermock-module-junit4:2.0.9"
     testImplementation "org.powermock:powermock-api-mockito2:2.0.9"
 
-    //json for unit test
-    implementation files('src/libs/json-20201115.jar')
-
     //espresso
     androidTestImplementation 'androidx.test:core:1.3.0'
     androidTestImplementation 'androidx.test:runner:1.4.0-alpha05'
@@ -77,4 +74,6 @@ dependencies {
     implementation project(':thinkingsdk')
     //implementation project(':runtime')
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    compile 'com.squareup.okhttp3:okhttp:3.10.0'
+    implementation 'com.alibaba:fastjson:1.1.54.android'
 }
