--- a/gradle.properties
+++ b/gradle.properties
@@ -11,11 +11,11 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-VERSION_NAME_SDK=2.8.4-beta.2
+VERSION_NAME_SDK=2.8.4
 VERSION_NAME_PLUGIN=2.0.2
 VERSION_NAME_RUNTIME=2.0.0
 VERSION_NAME_THIRD=1.2.0
-VERSION_NAME_ENGINE=1.1.0
+VERSION_NAME_ENGINE=1.0.0
 android.injected.testOnly=false
 android.useAndroidX=true
 
