--- a/thinkingsdk/src/androidTest/AndroidManifest.xml
+++ b/thinkingsdk/src/androidTest/AndroidManifest.xml
@@ -3,7 +3,7 @@
     android:versionName="1.0">
 
     <!--
-    This permission is required to allow the application to send events and properties to Mixpanel.
+    This permission is required to allow the application to send events and properties to ThinkingData.
    -->
     <uses-permission android:name="android.permission.INTERNET" />
 
