--- a/gradle.properties
+++ b/gradle.properties
@@ -6,23 +6,28 @@
 # http://www.gradle.org/docs/current/userguide/build_environment.html
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx1536m
+org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 # When configured, Gradle will run in incubating parallel mode.
-# This option should only be used with decoupled projects. More details, visit
-# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
+# This option should only be used with decoupled projects. For more details, visit
+# https://developer.android.com/r/tools/gradle-multi-project-decoupled-projects
 # org.gradle.parallel=true
-VERSION_NAME_SDK=3.2.1
-VERSION_NAME_CORE=1.3.1
-VERSION_NAME_EASY_START=1.0.0
-VERSION_NAME_PLUGIN=2.0.2
-VERSION_NAME_RUNTIME=2.0.0
-VERSION_NAME_THIRD=2.0.2
-VERSION_NAME_ENGINE=1.3.0
-VERSION_NAME_SENSITIVE=1.0.0
-android.injected.testOnly=false
+# AndroidX package structure to make it clearer which packages are bundled with the
+# Android operating system, and which are packaged with your app's APK
+# https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
+# Kotlin code style for this project: "official" or "obsolete":
+kotlin.code.style=official
+# Enables namespacing of each library's R class so that its R class includes only the
+# resources declared in the library itself and none from the library's dependencies,
+# thereby reducing the size of the R class for that library
+android.nonTransitiveRClass=true
 
-POM_ORGANIZATION=thinkinggame
-POM_REPO_NAME=thinkingdata
 POM_GROUP_ID=cn.thinkingdata.android
-POM_WEBSITE=https://github.com/ThinkingDataAnalytics/android-sdk
+VERSION_NAME_ANALYTICS=3.2.2
+VERSION_NAME_CORE=1.3.1
+VERSION_NAME_THIRD=2.0.2
+VERSION_NAME_SENSITIVE=1.0.0
+VERSION_NAME_EASY_START=1.0.0
+
+mavenCentralPublishing=true
+signAllPublications=true
