--- a/thinkingsdk/build.gradle
+++ b/thinkingsdk/build.gradle
@@ -1,123 +1,80 @@
-apply plugin: 'com.android.library'
+plugins {
+    id 'com.android.library'
+    id "com.vanniktech.maven.publish" version "0.33.0"
+    id 'signing'
+}
 
-version = VERSION_NAME_SDK
 android {
-    compileSdkVersion 30
-
-    lintOptions {
-        abortOnError false
-    }
+    namespace 'cn.thinkingdata.analytics'
+    compileSdk 35
 
     defaultConfig {
-        minSdkVersion 14
-        targetSdkVersion 30
-        versionCode 1
-        versionName "${version}"
+        minSdk 14
         consumerProguardFile 'proguard-rules.pro'
-
-        testApplicationId "cn.thinkingdata.analytics"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        testInstrumentationRunnerArguments clearPackageData: 'true'
-
-        addManifestPlaceholders([TAAuthID:"1b1c1fef65e3482bad5c9d0e6a823356"])
-
         javaCompileOptions {
             annotationProcessorOptions {
                 arguments = [TROUTER_MODULE_NAME: 'Analytic']
             }
         }
     }
-    testOptions {
-//        execution 'ANDROIDX_TEST_ORCHESTRATOR'
-
+    buildFeatures {
+        buildConfig = true // 显式启用 BuildConfig 生成（默认启用）
     }
     buildTypes {
         debug {
             debuggable true
             jniDebuggable true
             minifyEnabled true
+            zipAlignEnabled true
+            buildConfigField("String", "VERSION_NAME", "\"${VERSION_NAME_ANALYTICS}\"")
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         release {
             minifyEnabled true
             zipAlignEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            buildConfigField("String", "VERSION_NAME", "\"${VERSION_NAME_ANALYTICS}\"")
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
 dependencies {
-//    implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
-    compileOnly project(path: ':core')
-//    implementation 'cn.thinkingdata.android:TDCore:1.3.0'
+//    compileOnly project(':core')
+    implementation 'cn.thinkingdata.android:TDCore:1.3.1'
     compileOnly project(path: ':ta_apt')
     annotationProcessor project(path: ':ta_apt')
-    //implementation fileTree(dir: 'libs', include: ['*.jar'])
-    testImplementation 'junit:junit:4.12'
-
-    testImplementation 'org.mockito:mockito-core:2.19.0'
-    androidTestImplementation 'androidx.test:core:1.2.0'
-    androidTestImplementation 'androidx.test:runner:1.3.0-alpha01'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2-alpha01'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha01'
-    androidTestUtil 'androidx.test:orchestrator:1.2.0'
 }
 
-// make Jar
-def SDK_BASENAME ="ThinkingAnalyse";
-def SDK_VERSION ="-${version}";
-def sdkDestinationPath ="build/outputs/jar/";
-def zipFile = file('build/intermediates/packaged-classes/release/classes.jar')
+mavenPublishing {
 
-task deleteBuild(type: Delete) {
-    delete sdkDestinationPath + SDK_BASENAME + SDK_VERSION +".jar"
-}
+    coordinates(POM_GROUP_ID, "ThinkingAnalyticsSDK", VERSION_NAME_ANALYTICS)
 
-task makeJar(type: Jar) {
-    from zipTree(zipFile)
-    from fileTree(dir:'src/main', includes: ['assets/**'])// Package all the files in the assets directory
-    baseName = SDK_BASENAME
-    destinationDir = file(sdkDestinationPath)
-}
-
-makeJar.dependsOn(deleteBuild, build)
-
-// release new version bintrayUpload
-//apply plugin: 'com.novoda.bintray-release'
-
-//Properties properties = new Properties()
-//properties.load(project.rootProject.file('local.properties').newDataInputStream())
-//publish {
-//    bintrayUser = properties.getProperty("bintray.user")
-//    bintrayKey = properties.getProperty("bintray.apikey")
-//    dryRun = false
-//    userOrg = POM_ORGANIZATION
-//    repoName = POM_REPO_NAME
-//    groupId = POM_GROUP_ID
-//    artifactId = 'ThinkingAnalyticsSDK'
-//    publishVersion = version
-//    desc = 'The official Android SDK for Thinking Data Analytics'
-//    website = POM_WEBSITE
-//}
-
-// Upload to the local code base
-apply plugin: 'maven'
-uploadArchives{
-    repositories{
-        mavenDeployer{
-            repository(url:uri('/Users/liulongbing/Documents/repos'))
-            pom.groupId = POM_GROUP_ID
-            pom.artifactId = 'ThinkingAnalyticsSDK'
-            pom.version = version
+    pom {
+        name = "ThinkingAnalyticsSDK"
+        description = "ThinkingAnalytics Android SDK"
+        url = "https://github.com/ThinkingDataAnalytics/android-sdk"
+        licenses {
+            license {
+                name = "The Apache License, Version 2.0"
+                url = "http://www.apache.org/licenses/LICENSE-2.0.txt"
+                distribution = "http://www.apache.org/licenses/LICENSE-2.0.txt"
+            }
+        }
+        developers {
+            developer {
+                id = "ThinkingData"
+                name = "ThinkingData"
+                url = "https://www.thinkingdata.cn//"
+            }
+        }
+        scm {
+            url = "https://github.com/ThinkingDataAnalytics/android-sdk/tree/master"
+            connection = "scm:git:github.com/ThinkingDataAnalytics/android-sdk.git"
+            developerConnection = "scm:git:ssh://github.com/ThinkingDataAnalytics/android-sdk.git"
         }
     }
 }
-tasks.withType(Javadoc).all { enabled = false }
-
-
-//maven central publish
-ext {
-    PUBLISH_GROUP_ID = "cn.thinkingdata.android"
-    PUBLISH_ARTIFACT_ID = 'ThinkingAnalyticsSDK'
-    PUBLISH_VERSION = VERSION_NAME_SDK                   
-}
-apply from: "publish-mavencentral.gradle"
