--- a/thinkingsdk/build.gradle
+++ b/thinkingsdk/build.gradle
@@ -43,8 +43,8 @@ android {
 }
 
 dependencies {
-//    compileOnly project(':core')
-    implementation 'cn.thinkingdata.android:TDCore:1.3.1'
+    compileOnly project(':core')
+//    implementation 'cn.thinkingdata.android:TDCore:1.3.1'
     compileOnly project(path: ':ta_apt')
     annotationProcessor project(path: ':ta_apt')
 }
